<resources>
    <string name="app_name">MovieApp Jetpack</string>
    <string name="movie_catalogue">Architecture\nComponent</string>
    <string name="movie">MOVIE</string>
    <string name="tv_show">TV SHOW</string>
    <string name="detail">Detail</string>
    <string name="date_release">Date Release %s</string>
    <string name="rating">Rating : %s</string>
    <string name="popularity">Viewers : %s</string>
    <string name="description">Description %s</string>
</resources>